# python_logging

./: pyproject.toml
python_logging/: logging_test.py
tests/: logging-test.ipynb
