[tool.poetry]
name = "python-logging"
version = "0.1.0"
description = ""
authors = ["herzblue <herzblue@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.9"
ipykernel = "^6.29.5"
fastapi = "^0.115.5"
pydantic = "2.9.1" # 의존성 문제로 2.9.1로 변경
langchain-core = "^0.3.21"
langchain-google-vertexai = "^2.0.7"
google-cloud-logging = "^3.11.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
